<resources>
    <string name="app_name">"低碳钱包"</string>

    <string name="text_scan_account">"账户扫描"</string>
    <string name="text_account_details">"账户详情"</string>
    <string name="text_no_data">"暂无数据"</string>
    <string name="error_init_wallet">"网络连接失败,请检查您的网络"</string>

    <string name="menu_create_account">"新增账户"</string>
    <string name="menu_import_account">"导入账户"</string>
    <string name="menu_verify_account">"账户认证"</string>
    <string name="menu_settings">"设置"</string>
    <string name="error_load_wallet">"钱包加载出错"</string>

    <string name="menu_wallet_transaction">"交易转账"</string>
    <string name="menu_wallet_transaction_history">"交易历史"</string>

    <string name="menu_wallet_export">"导出备份"</string>
    <string name="menu_wallet_rename">"重新命名"</string>
    <string name="menu_wallet_delete">"删除钱包"</string>

    <string name="text_remain">"余额"</string>
    <string name="text_account">"账户"</string>
    <string name="text_account_remain">"账户余额"</string>
    <string name="text_input_password">"请输入密码"</string>
    <string name="text_input_password_again">"请再次输入密码"</string>

    <string name="text_cancel">"取消"</string>
    <string name="text_sure">"确定"</string>
    <string name="text_loading">"加载中&#8230;"</string>


    <string name="text_create_account">"新建账户"</string>
    <string name="error_wallet_name_short">"钱包昵称太短"</string>
    <string name="error_wallet_name_exists">"已存在相同名的钱包,请重新输入钱包名."</string>
    <string name="hint_password">@string/text_input_password</string>
    <string name="hint_password_rep">@string/text_input_password_again</string>
    <string name="text_create_account_password_summary">"请设置一个不小于8位数的密码\n该密码用于账户的消费兑换,请务必妥善保存,丢失密码将没有任何方法找回."</string>
    <string name="error_two_password_invalid">"两次输入的密码不一致"</string>
    <string name="error_password_short">"密码长度不够"</string>
    <string name="error_keystore_invalid">"输入密钥无效"</string>

    <string name="text_create_wallet_failed">"创建钱包失败"</string>

    <string name="text_export_failed">"钱包导出失败"</string>
    <string name="text_copyed">"keystore已复制到剪贴板"</string>

    <string name="text_wallet_import">"导入钱包"</string>
    <string name="hint_wallet_name">"请输入钱包昵称(2~10位)"</string>
    <string name="hint_wallet_keystore">"请输入钱包密钥"</string>
    <string name="text_import">"导入"</string>
    <string name="error_import_wallet_fail">"钱包导入失败,请检查密码是否正确"</string>
    <string name="text_wallet_import_success">"钱包导入成功"</string>

    <string name="text_export_wallet_ing">"导出钱包中&#8230;"</string>
    <string name="text_import_wallet_ing">"导入钱包中,请耐心等待"</string>

    <string name="text_export_keystore">"导出Keystore"</string>
    <string name="text_offline_save">"离线保存"</string>
    <string name="text_offline_save_summary">"请复制粘贴 Keystore 文件到安全,离线的地方保存.切勿保存到邮箱,记事本,网盘,聊天工具等,非常危险"</string>
    <string name="text_network_save">"请勿通过网络传输"</string>
    <string name="text_network_save_summary">"请勿通过网络工具传输 Keystore 文件,一旦被黑客获取将造成不可挽回的资产损失.建议离线设备通过扫二维码方式传输."</string>
    <string name="text_password_save">"保险箱保存"</string>
    <string name="text_password_save_summary">"如需在线保存,则建议使用安全等级更高的 1Password等密码保管软件保存 Keystore"</string>
    <string name="text_copy_keystore">"复制Keystore"</string>

    <string name="text_transaction">"交易"</string>
    <string name="hint_transaction_to_address">"转入钱包地址"</string>
    <string name="hint_transaction_amount">"转出金额"</string>
    <string name="text_wallet_amount_loading">""</string>
    <string name="text_wallet_amount">"钱包余额:%1f"</string>
    <string name="text_fee_loading">"正在读取当前费率"</string>
    <string name="text_fee">"当前费率: %1f"</string>
    <string name="text_fee_error">"查询当前费率出错"</string>
    <string name="hint_fee_summary">"交易费 = 交易费率*转出金额。如果交易费低于0.1币，每笔交易按0.1币收取，其它情况按正常交易费收取。"</string>
    <string name="error_password_invalid">"密码输入有误"</string>
    <string name="error_transfer_amount_invalid">"转出金额输入有误"</string>
    <string name="error_transfer_amount_to_low">"转出金额至少为1"</string>
    <string name="error_transfer_amount_retry">"重新输入转出金额"</string>
    <string name="text_transaction_success">"转账成功"</string>
    <string name="text_transaction_ing">"处理中,请稍后&#8230;"</string>

    <string name="text_transaction_history">"转账记录"</string>
    <string name="text_no_transaction_history">"无转账历史记录"</string>
    <string name="text_transaction_from">"转自:"</string>
    <string name="text_transaction_to">"转到:"</string>
    <string name="text_transaction_value">"金额:"</string>
    <string name="text_transaction_date">"日期:"</string>
    <string name="text_start_transaction">"发起转账"</string>

    <string name="text_account_from">"转出账户"</string>
    <string name="empty_common_account">"无常用地址,点击添加一个吧"</string>
    <string name="text_add_common">"添加常用地址"</string>
    <string name="text_common_account">"常用账户"</string>
    <string name="text_pick_account">"选择地址"</string>
    <string name="hint_common_name">"请输入账户名"</string>
    <string name="hint_common_address">"请输入账户地址"</string>
    <string name="error_address_invalid">"输入地址无效"</string>

    <string name="text_delete_address">"是否删除该转账账户"</string>

    <string name="text_transaction_record">"交易记录"</string>
    <string name="text_transaction_account">"交易账户"</string>
    <string name="text_transaction_time">"交易时间"</string>
    <string name="text_transaction_amount">"交易金额"</string>
    <string name="text_transaction_rate">"手续费"</string>
    <string name="text_address_copy">"交易地址已复制到剪贴板"</string>

    <string name="error_remain_zero">"当前账户余额不足"</string>
    <string name="warn_delete_account">"删除的账户将不在App内显示,请备份后再操作.确认删除账户请输入密码!"</string>
    <string name="text_thinking">"我再想想"</string>
    <string name="text_delete_account">"删除账户"</string>
    <string name="error_invalid_password">"密码输入错误"</string>

    <string name="text_rename">"重命名"</string>
    <string name="hint_new_name">"请输入新的名字"</string>
    <string name="text_rename_success">"钱包昵称修改成功."</string>
    <string name="error_rename_failed">"钱包重命令失败,钱包昵称可能已经存在."</string>

    <string name="text_symbol">"-"</string>
    <string name="format_float">"%1.4f"</string>
</resources>
