<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".export.ExportActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/text_input_password"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <com.lc.app.ui.PasswordView
            android:id="@+id/wallet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:hint="@string/hint_password" />

        <View
            android:id="@+id/spilt"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/wallet_password"
            android:layout_marginTop="10dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/spilt"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_cancel"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <View
                android:layout_width="1px"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_sure"
                android:textColor="@color/gray"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>